tests/19-enums-tuple-variant-incomplete.stderr
error[E0308]: mismatched types
 --> tests/19-enums-tuple-variant-incomplete.rs:4:9
  |
4 | #[def = "A"]
  |         ^^^
  |         |
  |         expected `Foo`, found enum constructor
  |         expected `Foo` because of return type
5 | enum Foo {
6 |     A(usize),
  |     - `A` defines an enum variant constructor here, which should be called
  |
  = note:          expected enum `Foo`
          found enum constructor `fn(usize) -> Foo {Foo::A}`
help: use parentheses to construct this tuple variant
  |
4 | #[def = "A"(/* usize */)]
  |            +++++++++++++
